--- a/Projeto Final/index.html
+++ b/Projeto Final/index.html
@@ -8,6 +8,7 @@
     <link href="/styles/global.css" type="text/css" rel="stylesheet">
     <link href="/styles/TextMessage.css" type="text/css" rel="stylesheet">
     <link href="/styles/SceneTransition.css" type="text/css" rel="stylesheet">
+    <link href="/styles/KeyboardMenu.css" type="text/css" rel="stylesheet">
 
     <!--Battle CSS-->
     <link href="/styles/Battle.css" type="text/css" rel="stylesheet">
@@ -38,12 +39,14 @@
     <script src="/KeyPressListener.js"></script>
     <script src="/RevealingText.js"></script>
     <script src="/SceneTransition.js"></script>
+    <script src="/KeyboardMenu.js"></script>
 
     <!--Battle-->
     <script src="/Battle/Battle.js"></script>
     <script src="/Battle/Combatant.js"></script>
     <script src="/Battle/Team.js"></script>
     <script src="/Battle/SubmissionMenu.js"></script>
+    <script src="/Battle/ReplacementMenu.js"></script>
     <script src="/Battle/BattleEvent.js"></script>
     <script src="/Battle/TurnCycle.js"></script>
     <script src="/Battle/BattleAnimations.js"></script>
