--- a/Projeto Final/index.html
+++ b/Projeto Final/index.html
@@ -9,12 +9,15 @@
     <link href="/styles/TextMessage.css" type="text/css" rel="stylesheet">
     <link href="/styles/SceneTransition.css" type="text/css" rel="stylesheet">
     <link href="/styles/KeyboardMenu.css" type="text/css" rel="stylesheet">
+    <link href="/styles/Hud.css" type="text/css" rel="stylesheet">
 
     <!--Battle CSS-->
     <link href="/styles/Battle.css" type="text/css" rel="stylesheet">
     <link href="/styles/Combatant.css" type="text/css" rel="stylesheet">
-    <link href="/styles/Team.css" type="text/css" rel="stylesheet">
     <link href="/styles/SubmissionMenu.css" type="text/css" rel="stylesheet">
+    <link href="/styles/Team.css" type="text/css" rel="stylesheet">
+    <link href="/styles/Menus.css" type="text/css" rel="stylesheet">
+    
 
 </head>
 <body>
@@ -44,6 +47,8 @@
     <script src="/RevealingText.js"></script>
     <script src="/SceneTransition.js"></script>
     <script src="/KeyboardMenu.js"></script>
+    <script src="/Hud.js"></script>
+    <script src="/PauseMenu.js"></script>
 
     <!--Battle-->
     <script src="/Battle/Battle.js"></script>
