--- a/Projeto Final/index.html
+++ b/Projeto Final/index.html
@@ -39,6 +39,7 @@
     <script src="/Overworld.js"></script>
     <script src="/GameObject.js"></script>
     <script src="/Person.js"></script>
+    <script src="/PizzaStone.js"></script>
     <script src="/Sprite.js"></script>
     <script src="/OverworldMap.js"></script>
     <script src="/OverworldEvent.js"></script>
@@ -49,6 +50,8 @@
     <script src="/KeyboardMenu.js"></script>
     <script src="/Hud.js"></script>
     <script src="/PauseMenu.js"></script>
+    <script src="/CraftingMenu.js"></script>
+    <script src="/Progress.js"></script>
 
     <!--Battle-->
     <script src="/Battle/Battle.js"></script>
