--- a/Projeto Final/index.html
+++ b/Projeto Final/index.html
@@ -21,7 +21,7 @@
     <div class="game-container">
       <canvas class="game-canvas" width="352" height="198"></canvas>
     </div>
-     <p class="how-to-play">Use Arrow Keys to move. Enter to prompt/talk.</p>
+     <p class="how-to-play">Use as setas do teclado para se mover. Enter para conversar/interagir.</p>
 
     <!-- Content -->
     <script src="/Content/pizzas.js"></script>
